fix: Map in restaurant.html not covering the full height

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ nav h1 a {
 
 .inside #map-container {
     background: blue none repeat scroll 0 0;
-    height: 87vh;
+    height: calc(100vh - 80px);
     position: fixed;
     right: 0;
     top: 80px;
